--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@
 body {
   font-family: OpenSans;
   background-color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 /* style Scrollbar */
@@ -53,4 +56,8 @@ p {
 .text_li {
   font-size: 14px;
   font-weight: bold;
+}
+
+main {
+  flex-grow: 1;
 }
