--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,15 @@
   font-style: normal;
   font-weight: normal;
 }
+@font-face {
+  font-family: Vazir;
+  src: url("../font/Vazir-Bold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
 
 body {
-  font-family: OpenSans;
+  font-family: OpenSans, Vazir;
   background-color: #f1f1f1;
   display: flex;
   flex-direction: column;
