--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 }
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: transparent;
   border-radius: 5px;
   margin: 10px 0px;
 }
